--- a/addons/sourcemod/translations/ru/zombieriot.phrases.txt
+++ b/addons/sourcemod/translations/ru/zombieriot.phrases.txt
@@ -6,7 +6,7 @@
 
 	"Round objective"
 	{
-		"ru"		"Игра @greenЛюдей vs. Зомби@default, люди должны убить всех зомби, чтобы достичь следующего уровня."
+		"ru"		"Битва @greenлюдей против зомби@default, люди должны убить всех зомби, чтобы достичь следующего уровня."
 	}
 
 	"Feature is disabled"
@@ -116,7 +116,7 @@
 	"DX90 not supported"
 	{
 		"#format"	"{1:d},{2:d}"
-		"ru"		"Блокировка оверлея - DX{1} обнаружен (DX{2} нужен)"
+		"ru"		"Блокировка оверлея - DX{1} обнаружен (DX{2} требуется)"
 	}
 	// ===========================
 	// Menus
