--- a/addons/sourcemod/translations/ru/zombieriot.phrases.txt
+++ b/addons/sourcemod/translations/ru/zombieriot.phrases.txt
@@ -11,7 +11,7 @@
 
 	"Feature is disabled"
 	{
-		"ru"		"Эта функция была отключена хостом сервера."
+		"ru"		"Эта функция была отключена организатором сервера."
 	}
 
 	"Must be alive"
@@ -129,7 +129,7 @@
 
 	"Market rebuy"
 	{
-		"ru"		"Перезакупиться"
+		"ru"		"Купить снова"
 	}
 
 	// ===========================
@@ -145,7 +145,7 @@
 	"HUD target"
 	{
 		"#format"	"{1:d},{2:d},{3:s},{4:d},{5:d},{6:N},{7:d}"
-		"ru"		"День {1}/{2} - {3}\nЗомби осталось: {4}\nЛюдей осталось: {5}\nЦель: {6} | Здоровье: {7}"
+		"ru"		"День {1}/{2} - {3}\nЗомби осталось: {4}\nЛюдей осталось: {5}\nИгрок: {6} | Здоровье: {7}"
 	}
 
 	// ===========================
@@ -159,18 +159,18 @@
 
 	"Plugin loading"
 	{
-		"ru"		"-----------|         Zombie Riot Загружается        |----------"
+		"ru"		"-----------|         Zombie Riot загружается        |----------"
 	}
 
 	"Plugin loaded"
 	{
-		"ru"		"-----------|         Zombie Riot Загружен         |----------"
+		"ru"		"-----------|         Zombie Riot загружен         |----------"
 	}
 
 	"Hostname prefix"
 	{
 		"#format"	"{1:d},{2:d}"
-		"ru"		"[ZRiot День: {1}/{2}]"
+		"ru"		"[День ZRiot: {1}/{2}]"
 	}
 
 	"Restrict weapon mapstart"
